# mvvm

./: build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/linken/mvvm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/linken/mvvm/: MainActivity.kt
app/src/main/res/layout/: activity_text.xml
app/src/test/java/com/linken/mvvm/: ExampleUnitTest.kt
common_library/: build.gradle
common_library/src/androidTest/java/com/mooc/common/: ExampleInstrumentedTest.kt
common_library/src/main/: AndroidManifest.xml
common_library/src/main/java/com/mooc/common/utils/: AppExt.kt
common_library/src/main/java/com/mooc/common/utils/base/: BaseActivity.kt  BaseFragment.kt  BaseViewModel.kt
common_library/src/main/java/com/mooc/common/utils/widget/: CommonToolBar.kt
common_library/src/main/res/layout/: common_activity_base.xml  common_toolbar.xml  common_toolbar_left.xml  common_toolbar_right.xml
common_library/src/main/res/values/: colors.xml  strings.xml
common_library/src/test/java/com/mooc/common/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ssl_library/: CMakeLists.txt  build.gradle
ssl_library/src/androidTest/java/com/linken/common/: ExampleInstrumentedTest.kt
ssl_library/src/main/: AndroidManifest.xml
ssl_library/src/main/cpp/: device_id.cpp  device_id.h  log.h  utils.cpp
ssl_library/src/main/cpp/include/openssl/: opensslconf.h
ssl_library/src/main/java/com/linken/common/: a.java
ssl_library/src/test/java/com/linken/common/: ExampleUnitTest.kt
